--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "natie-paper-demo",
+  "name": "native-paper-demo",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,10 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/material-bottom-tabs": "^6.2.11",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-paper": "^5.1.3",
+    "react-native-safe-area-context": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
