--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-maps": "^1.3.2",
     "react-native-paper": "^5.1.3",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-snap-carousel": "^4.0.0-beta.6"
