--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native-maps": "^1.3.2",
     "react-native-paper": "^5.1.3",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-snap-carousel": "^4.0.0-beta.6"
+    "react-native-snap-carousel": "^4.0.0-beta.6",
+    "expo-location": "~15.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
