--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^6.7.3",
     "@react-navigation/material-bottom-tabs": "^6.2.11",
     "expo": "~47.0.12",
+    "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-maps": "^1.3.2",
     "react-native-paper": "^5.1.3",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-snap-carousel": "^4.0.0-beta.6",
-    "expo-location": "~15.0.1"
+    "react-native-snap-carousel": "^4.0.0-beta.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
