--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "^6.7.3",
     "@react-navigation/material-bottom-tabs": "^6.2.11",
+    "@react-navigation/native-stack": "^6.9.8",
     "expo": "~47.0.12",
     "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
