--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.70.5",
     "react-native-maps": "^1.3.2",
     "react-native-paper": "^5.1.3",
+    "react-native-paper-dates": "^0.11.14",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-snap-carousel": "^4.0.0-beta.6"
   },
